--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,37 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>An element is a type of content on a page. i.e. text, image, header, and list elements.</li>
+          <li>meta-related, content division, and semantic elements are used to divide and describe content.</li>
+          <li>The head element contains information about the webpage.(it contains metadata, unseen by the user.)</li>
+          <li>The body element represents the visible content shown to the user. </li>
+          <li>child elements are elements nested inside another element, called the parent element.</li>
+          <li> semantic HTML elements' names describe their content and role on the page.</li>
+          <li>the term element refers to the entire element from open to closing tag while a tag is what is between angle brackets "<>."</li>
+        </ul>
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter CSS notes here</li>
+        </ul>
+      </section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on.</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
+        </ul>
+      </section>
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter Javascript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
