--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -27,7 +28,11 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter CSS notes here</li>
+          <li>A margin indicates how much space we want on the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside the element.</li>
+          <li>There are three ways to style a webpage using css: Inline, internal css style sheet, and an external css file sheet.</li>
+          <li> the selector defines element or attributes which the rules (declarations) will apply.</li>
+          <li>Declarations contain property and value. </li>
         </ul>
       </section>
       <section class="card" id="git-section">
