add js notes in devtools

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -46,7 +46,11 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter Javascript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>The operator is a mathematical symbol that produces a result based on two values(or variables).</li>
+          <li> conditionals are code structures used to test for whether expressions are true or not. A common form is "if...else" statements.</li>
+          <li>An array is a single variable that is used to hold a group of data.</li>
         </ul>
       </section>
     </main>
